--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==3.0.2
 gunicorn==21.2.0
-pandas==2.1.4
-numpy==1.26.3
+pandas==1.5.3  # Downgraded for compatibility
+numpy==1.24.4
 requests==2.31.0
 sqlalchemy==2.0.25
-scikit-learn==1.3.2
+scikit-learn==1.2.2  # Downgraded
 psycopg2-binary==2.9.9
