--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.2
 gunicorn==21.2.0
 pandas==1.5.3
-numpy==1.24.4
+numpy==1.24.3  # Downgraded for compatibility
 requests==2.31.0
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
